--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="app">
       <header>
         <h1>Github Favorites</h1>
-        <div>
+        <div class="search">
           <label for="input-search" class="sr-only">Ususario do Github</label>
           <input
             id="input-search"
@@ -53,22 +53,26 @@
             </td>
             <td class="repositories">98</td>
             <td class="followers">20892</td>
-            <td><button>&times;</button></td>
+            <td><button class="remove">&times;</button></td>
           </tr>
           <tr>
             <td class="user">
-              <img src="https://github.com/felipe0402.png" alt="" />
-              <a href="https://github.com/felipe0402" target="_blank">
-                <p>Felipe Andrade</p>
-                <span>Felipe0402</span>
+              <img
+                src="https://avatars.githubusercontent.com/u/88568500?v=4"
+                alt=""
+              />
+              <a href="https://github.com/pablotelles" target="_blank">
+                <p>Pablo Telles</p>
+                <span>pablotelles </span>
               </a>
             </td>
             <td class="repositories">98</td>
             <td class="followers">20892</td>
-            <td><button>&times;</button></td>
+            <td><button class="remove">&times;</button></td>
           </tr>
         </tbody>
       </table>
     </div>
   </body>
+  <script type="module" src="" ></script>
 </html>
