adicionando animacao no h1

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <body>
     <div id="app">
       <header>
-        <h1>Github Favorites</h1>
-        <div class="search">
+        <h1 class=" logo"><b><span>GitHub </span>  <span>Favorites</span></b></h1>
+        <div class="input-wrapper">        <div class="search">
           <label for="input-search" class="sr-only">Ususario do Github</label>
           <input
             id="input-search"
