--- a/index.html
+++ b/index.html
@@ -43,36 +43,9 @@
         </thead>
 
         <tbody>
-          <tr>
-            <td class="user">
-              <img src="https://github.com/felipe0402.png" alt="" />
-              <a href="https://github.com/felipe0402" target="_blank">
-                <p>Felipe Andrade</p>
-                <span>Felipe0402</span>
-              </a>
-            </td>
-            <td class="repositories">98</td>
-            <td class="followers">20892</td>
-            <td><button class="remove">&times;</button></td>
-          </tr>
-          <tr>
-            <td class="user">
-              <img
-                src="https://avatars.githubusercontent.com/u/88568500?v=4"
-                alt=""
-              />
-              <a href="https://github.com/pablotelles" target="_blank">
-                <p>Pablo Telles</p>
-                <span>pablotelles </span>
-              </a>
-            </td>
-            <td class="repositories">98</td>
-            <td class="followers">20892</td>
-            <td><button class="remove">&times;</button></td>
-          </tr>
+         
         </tbody>
       </table>
     </div>
   </body>
-  <script type="module" src="" ></script>
-</html>
+<script type="module" src="./js/main.js"></script></html>
